<resources>
    <string name="app_name">ShoeStore</string>

    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_hint">example@example.com</string>
    <string name="instructions">Instructions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_name">Add name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="shoe_shop">Shoe shop</string>
    <string name="shoe_company">Add shoe company</string>
    <string name="shoe_size">Add shoe size</string>
    <string name="shoe_description">Add shoe description</string>
    <string name="explanation_1">In the next screen you can see your added shoes</string>
    <string name="explanation_2">Add a shoe in the FAB from the next screen</string>
    <string name="shoe_store_welcome">Welcome to the Shoe store</string>
    <string name="welcome_description">A place where you can add your favorite shoes</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="shoe_info">Shoe info</string>
    <string name="check_shoe_list">Check shoe list</string>
</resources>
