<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_light"
        tools:context=".views.WelcomeFragment">

        <TextView
            android:id="@+id/example_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_store_welcome"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/example_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/example_1"
            app:layout_constraintStart_toStartOf="@+id/example_1"
            app:layout_constraintTop_toBottomOf="@+id/example_1" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewModel.showInstructionsScreen(view)}"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/example_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>